feat: проверка доступности сайта, авто-деактивация просроченных подписок, рефакторинг по SonarQube (когнитивная сложность, deprecated, исключения)